Fixed DM Icons Spacing

--- a/discorddark.css
+++ b/discorddark.css
@@ -675,7 +675,7 @@ h2.name__29444, .membersGroup_c8ffbb, .name__29444 .overflow__82b15, .member_cou
   border-radius: 12px !important;
 }
 
-.root__49fc1:not(:has(.footer__49fc1)) .content__49fc1 {
+.root__49fc1:not(:has(.header__49fc1)) .content__49fc1 {
   border: 0 solid transparent;
   border-radius: 12px;
 }
@@ -777,6 +777,15 @@ a:has([d^="M12 23a11 11 0 1 0 0-22 11 11 0 0 0 0 22Zm-.28-16c-.98"]) {
 /* Made Border Radius more Gradual on Delete Message Modal Embed */
 .message__89466 {
   border-radius: 6px;
+}
+
+/* Fixed DM Icons Spacing */
+#guild-list-unread-dms > div {
+  padding-bottom: 20px;
+}
+
+#guild-list-unread-dms > div:nth-last-child(1) {
+  padding-bottom: unset;
 }
 
 /* ---------- Buttons ---------- */
